--- a/src/styles/_variables.css
+++ b/src/styles/_variables.css
@@ -1,12 +1,14 @@
 :root {
     --max-width: 1280px;
     --height-header: 5rem;
-
+    --padding-inline-min: 1rem;
     --font-main: 'Montserrat', sans-serif;
 
 }
 
 #root-app[data-theme="default"] {
+    --color-primary: #ff5e5e;
+    --color-primary-text: #444444;
     --color-error: red;
     --color-pokedex: #e32020;
     --color-items: #dc940b;
