--- a/src/components/Layout/layout.module.css
+++ b/src/components/Layout/layout.module.css
@@ -6,5 +6,10 @@
 }
 .main {
     flex-grow: 2;
-    padding-inline: var(--padding-inline-min);
+    padding: 4rem var(--padding-inline-min) 3rem;
+    background: url("../../images/png/square_bg.png") repeat;
+}
+.container {
+    margin: 0 auto;
+    max-width: var(--max-width);
 }
